--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,23 @@
 @import url("../styles/reset.css");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("../styles/cabecalho.css");
+
+:root {
+    --branco: #ffffff;
+    --cor-fonte-heading: #101828;
+    --cor-fonte-texto: #667085;
+    --cor-destaque: #8E2424;
+    --fonte-principal: 'Inter', sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    box-sizing: border-box;
+    font-family: var(--fonte-principal);
+    background-color: var(--branco);
+    font-size: 16px;
+    font-weight: 400;
+}
