Modificando unidade de margem da lista no elemento nav

--- a/styles/cabecalho.css
+++ b/styles/cabecalho.css
@@ -21,7 +21,7 @@
     display: flex;
     gap: 32px;
     align-items: baseline;
-    margin-right: 380px;
+    margin-right: 23.75em;
 }
 
 .cabecalho-botao {
