--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import url("../styles/cabecalho.css");
+@import url("../styles/sobre.css");
 
 :root {
     --branco: #ffffff;
