--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 @import url("../styles/cabecalho.css");
 @import url("../styles/sobre.css");
 @import url("../styles/metricas.css");
+@import url("../styles/vagas.css");
 
 :root {
     --branco: #ffffff;
