--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 @import url("../styles/sobre.css");
 @import url("../styles/metricas.css");
 @import url("../styles/vagas.css");
+@import url("../styles/areas.css");
 
 :root {
     --branco: #ffffff;
