--- a/styles/opinioes.css
+++ b/styles/opinioes.css
@@ -1,4 +1,4 @@
-.opnioes-container {
+.opinioes-container {
     margin: 10em 7em 12em 7em;
     background: rgba(195, 25, 25, 0.03);
     padding: 4em;
