--- a/styles/vagas.css
+++ b/styles/vagas.css
@@ -12,6 +12,7 @@
     background-color:rgba(142, 36, 36, 0.05);
     border-radius: 16px;
     padding: 4px 12px;
+    font-size: 0.875em;
     font-weight: 500;
     color: var(--cor-destaque);
 }
