--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 @import url("../styles/vagas.css");
 @import url("../styles/areas.css");
 @import url("../styles/opinioes.css");
+@import url("../styles/rodape.css");
 
 :root {
     --branco: #ffffff;
